# SidewalkNavigationStack

./: .gitignore  README.md  current_route.html  sidewalk_map_38.838_-77.294.graphml  sidewalk_map_38.838_-77.295.graphml
Globalrouter/global_planner/: config.py
Globalrouter/planner_settings/: route_planner.py  route_test_map.html  test_planner.py  utility.py
frodobot_bridge/: analyze_imu_axes.py  calibrate_gyro.py  package.xml  setup.cfg  setup.py
frodobot_bridge/config/: bridge_params.yaml
frodobot_bridge/frodobot_bridge/: sdk_bridges.py
frodobot_bridge/nodes/: sdk_bridges
frodobot_bridge/urdf/: earthrover.urdf.xacro
frodobot_localization/: package.xml  setup.cfg  setup.py
frodobot_localization/config/: ekf_example.yaml  heading_fusion.yaml
frodobot_localization/frodobot_localization/: heading_fusion_node.py
frodobot_localization/heading_fusion/: README.md  package.xml  setup.cfg  setup.py
frodobot_localization/heading_fusion/config/: navsat_transform_example.yaml
frodobot_localization/heading_fusion/heading_fusion/: heading_fusion_node.py
frodobot_localization/heading_fusion/launch/: heading_fusion.launch.py
frodobot_localization/launch/: heading_fusion.launch.py  localization.launch.py
frodobot_mapping/: README.md  package.xml  setup.cfg  setup.py
frodobot_mapping/config/: mapping.yaml
frodobot_mapping/frodobot_mapping/: traversability_map.py
frodobot_mapping/launch/: mapping.launch.py
frodobot_mppi_critics/: CMakeLists.txt  package.xml  plugins.xml
frodobot_mppi_critics/include/frodobot_mppi_critics/: direction_critic.hpp
frodobot_mppi_critics/src/: direction_critic.cpp
frodobot_navigation/: package.xml  setup.cfg  setup.py
frodobot_navigation/config/: nav2_params.yaml  route.yaml
frodobot_navigation/frodobot_navigation/: waypoint_follower.py
frodobot_navigation/launch/: mppi_test.launch.py  navigation.launch.py
frodobot_perception_models/: README.md  __init__.py  api.py  inference.py  pyproject.toml  train.py
frodobot_perception_models/config/: perception.yaml
frodobot_perception_models/dataset/: navigable_dataset.py
frodobot_perception_models/model/: multi_head_perception.py
frodobot_perception_ros/: package.xml  setup.cfg  setup.py
frodobot_perception_ros/config/: perception.yaml
frodobot_perception_ros/frodobot_perception_ros/: perception_head.py
frodobot_perception_ros/launch/: perception.launch.py
frodobot_perception_ros/nodes/: perception_node
sidewalk_localization/: setup.cfg
sidewalk_localization/config/: ekf.yaml
sidewalk_localization/launch/: localization.launch.py  localization1.launch.py
src/: frames_2025-11-24_17.10.25.gv  frames_2025-11-24_18.33.37.gv
src/sidewalk_bridge/: package.xml  setup.cfg  setup.py
src/sidewalk_bridge/sidewalk_bridge/: bridge_node.py  robot_client.py  robot_messages_pb2.py  utilis.py
src/sidewalk_depthestimation/: package.xml  setup.cfg  setup.py
src/sidewalk_depthestimation/sidewalk_depthestimation/: dp.py
src/sidewalk_localization/: package.xml  setup.py
src/sidewalk_localization/config/: ekf.yaml
src/sidewalk_localization/launch/: localization.launch.py
src/sidewalk_main/: package.xml  setup.cfg  setup.py
src/sidewalk_main/config/: boxx.urdf  mux.yaml  ps5controller.yaml
src/sidewalk_main/launch/: main.launch.py  sidewalk_nav.rviz
src/sidewalk_mapping_cpp/: CMakeLists.txt  package.xml
src/sidewalk_mapping_cpp/config/: filters.yaml
src/sidewalk_mapping_cpp/src/: sidewalk_grid_node.cpp
src/sidewalk_osmplanner/: package.xml  setup.cfg  setup.py
src/sidewalk_osmplanner/sidewalk_osmplanner/: osm_planner.py
src/sidewalk_ui/: package.xml  setup.cfg  setup.py
src/sidewalk_ui/launch/: sidewalk_ui.launch.py
src/sidewalk_ui/sidewalk_ui/: gps_waypoint_sender.py
src/sidewalk_ui/web/: dashboard.html
