<?xml version="1.0"?>
<package format="3">
  <name>frodobot_bridge</name>
  <version>0.1.0</version>
  <description>ROS 2 bridge for the FrodoBots Earth Rover SDK.</description>
  <maintainer email="sshres32@gmu.edu">SamepAI</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>ament_index_python</depend>

  <exec_depend>python3-numpy</exec_depend> 
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-requests</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
