<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>frodobot_mapping</name>
  <version>0.1.0</version>
  <description>Real-time traversability mapping for the FrodoBots Earth Rover.
    Converts the traversable-path PointCloud2 from frodobot_perception_ros
    into a 2D OccupancyGrid compatible with Nav2.
  </description>

  <maintainer email="sshres32@gmu.edu">SamepAI</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_pep8</test_depend>
  <test_depend>ament_pyflakes</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
