<?xml version="1.0"?>
<package format="3">
  <name>frodobot_perception_ros</name>
  <version>0.1.0</version>
  <description>ROS 2 perception node for frodobot.</description>
  <maintainer email="sshres32@gmu.edu">Sameep</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf_transformations</depend>
  <depend>builtin_interfaces</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
